2.1.0 (10.04.2018):

* Support import of password-protected PDFs. Closes Debian bug #894764
  (Please prompt for password on import of encrypted file)


2.0.3 (30.03.2018):

* Always update image viewer if page selection changes
  Closes Debian bug #893026 (Preview pane does not update)
* Fixed manually typing date in metadata dialog (again)
  Closes Debian bug #893024 (Manual entry into UI date widget is broken)
* If image is zoomed to fit viewer, update zoom when the size of the viewer
  changes
* Update cursor depending on selected tool and position
* Build corrupt session file by hand rather than storing binary file that is
  not universally compatible. Closes bug #293
  (t/175_open_session2.t fails on i686: Long integer size is not compatible)
* Convert all scans to PNG to allow tesseract to extract resolution
* Ignore invalid options in profile
* Ignore options in profile that are already within tolerance. Closes #294
  (Hangs on "Setting Option Source" When Changing Between Feeder and Flatbed)
* Update to Hungarian translation (thanks to csola)


2.0.2 (26.03.2018):

* Clear view if no page selected
* Change boolean scan options to use switch instead of checkbox widget
* Fixed manually typing date in metadata dialog. Closes Debian bug #893024
  (Manual entry into UI date widget is broken)
* Take colours for image viewer from theme. Closes Debian bug #893025
  (White UI background makes page borders disappear)
* Support Glib::Object::Introspection < 0.043


2.0.1 (12.03.2018):

* Fixed editing OCR output
* Fixed displaying image after undoing
* Fixed displaying image after deleting page
* Fixed text in progress bars
* Fixed warning message clearing all pages if no scanner detected


2.0.0 (08.03.2018):

* Switch from gtk+-2 to gtk+-3, requiring the reimplementation of GtkImageview
  in pure Perl, as C library not compatible with gtk+-3.
* Fixed ghosting if flatbed only source option but not set.