@@ -2,6 +2,7 @@
 
 * Support import of password-protected PDFs. Closes Debian bug #894764
   (Please prompt for password on import of encrypted file)
+* Update cursor depending on edge of selection
 
 
 2.0.3 (30.03.2018):
